[project]
name = "nguyenpanda-httpd"
version = "0.1.0"
description = "A lightweight HTTP server implementation for nguyenpanda.com, demonstrating raw socket programming without frameworks."
authors = [
    { name = "Tuong Nguyen Ha", email = "hatuongnguyen@0107gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "nguyenpanda>=1.0.0",
    "pyyaml>=6.0.3",
]
