[project]
name = "nguyenpanda-httpd"
version = "0.1.0"
description = "A lightweight HTTP server implementation for nguyenpanda.com, demonstrating raw socket programming without frameworks."
authors = [
    { name = "Tuong Nguyen Ha", email = "hatuongnguyen@0107gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "nguyenpanda>=1.0.0",
    "nguyenpanda-config>=0.1.1",
    "psutil>=7.2.1",
    "pyyaml>=6.0.3",
    "typing-extensions>=4.15.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
nguyenpanda-httpd = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "nguyenpanda-httpd",
    "pylint[spelling]>=4.0.4",
]
